# airbyte

airbyte-integrations/connectors/source-google-ad-manager/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  acceptance-test-config.yml  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-google-ad-manager/integration_tests/: acceptance.py
airbyte-integrations/connectors/source-google-ad-manager/source_google_ad_manager/: config.py  source.py  source_jak.py  spec.yaml  utils.py
airbyte-integrations/connectors/source-google-ad-manager/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
